--- a/mlo_project/pyproject.toml
+++ b/mlo_project/pyproject.toml
@@ -22,6 +22,7 @@ classifiers = [
 ]
 dependencies = [
   "fastapi==0.115.6",
+  "hydra-core>=1.3.2",
   "matplotlib>=3.10.8",
   "torch==2.6",
   "typer==0.15.1",
