--- a/mlo_project/pyproject.toml
+++ b/mlo_project/pyproject.toml
@@ -21,12 +21,15 @@ classifiers = [
   "Programming Language :: Python :: 3.14",
 ]
 dependencies = [
+  "dotenv>=0.9.9",
   "fastapi==0.115.6",
   "hydra-core>=1.3.2",
   "matplotlib>=3.10.8",
+  "pytorch-lightning>=2.6.0",
   "torch==2.6",
   "typer==0.15.1",
   "uvicorn==0.34",
+  "wandb>=0.23.1",
 ]
 
 [dependency-groups]
